# cs3110-final-project

./: AUTHORS.md  INSTALL.md  README.md  RepoURL.txt  bisect774002004.coverage  bisect850923480.coverage  bisect943057590.coverage  dune-project  gallery.yaml
data/: ships1.csv
lib/: ai.ml  ai.mli  dune  initialize.ml  initialize.mli  turns.ml  turns.mli
test/: dune  test_ai.ml  test_initialize.ml  test_turns.ml
