(test
 (name test_turns)
 (modules test_turns)
 (libraries cs3110_final_project ounit2)
 (preprocess (pps bisect_ppx))
 (deps
   (:ships1 ../data/ships1.csv)
 )
)

(test
 (name test_ai)
 (modules test_ai)
 (libraries cs3110_final_project ounit2)
 (preprocess (pps bisect_ppx)))

(test
 (name test_initialize)
 (modules test_initialize)
 (libraries cs3110_final_project ounit2)
 (preprocess (pps bisect_ppx)))